# OKEngine

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  Makefile  NOTICE  README.md  SECURITY.md  engine-manifest.yaml  pyproject.toml  requirements-dev.txt  requirements-extract.txt
config/: base-schema.yaml  config.yaml.template  cron-tiers.yaml  engine-crons.json  source-connector.schema.yaml
docs/: agent-chat.md  application-catalog.md  authoring-a-pack.md  authoring-an-extension.md  backup-restore.md  cockpit-assessed-values.md  cold-start-checklist.md  collection-observability.md  common-issues.md  conformance-rules.md  core-types-and-extensions.md  cron-ordering-design.md  deploy-a-new-domain.md  engine-domain-boundary.md  entity-partitioning.md  extension-api-design.md  human-review.md  id-index-runbook.md  importing-an-existing-vault.md  ingest-extraction.md  install-okpack-ai-research.md  install-okpack-cti.md  install-okpack-sec.md  install-selected-pack.md  kb-tooling.md  model-run-receipts.md  model-selection.md  model-write-contracts.md  observability.md  okf-alignment.md  operating-cost.md  overview.md  pack-building-challenges.md  reader-extension-points.md  release-checklist.md  roadmap.md  sharded-scan-discipline.md  source-connectors.md  supply-chain.md  technical-reference.md  (+1 more)
extensions/: README.md
migrations/: README.md
okengine-cockpit/: Dockerfile  README.md  app.py  requirements.txt
okengine-mcp/: Dockerfile  Dockerfile.review  README.md  converge.py  output_contract_enforce.py  requirements.txt  scope.py  server.py  write_server.py
okengine-operations/: Dockerfile  app.py
okengine-reader/: Dockerfile  README.md  app.py  limits.py  requirements.txt
patches/: 01-file-operations-write-guard.patch  02-file-tools-doubled-path-guard.patch  02-file-tools-read-echo-guard.patch  03-cron-scheduler-failure-path-guard.patch  03-cron-scheduler-no-agent-failure-guard.patch  04-usage-pricing-models.patch  05-delegate-tool-session-end.patch  06-approval-vercel-sandbox.patch  README.md  apply.sh  (+9 more)
(+738 files in other folders)
